--- a/przychodnia-activity/src/main/resources/templates/index.html
+++ b/przychodnia-activity/src/main/resources/templates/index.html
@@ -126,6 +126,25 @@
   </div>
  <hr> </hr>
 
+    <div class="container text-center">
+        <h3>Aktualności</h3>
+
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="/images/bol_brzucha.jpg" class="img-responsive" style="width:100%" alt="Image"/>
+                <h4>Jak rozpoznać ból brzucha?</h4>
+            </div>
+            <div class="col-sm-4">
+                <img src="/images/wybielanie.jpg" class="img-responsive" style="width:100%" alt="Image"/>
+                <h4>Czy warto wybielać zęby?</h4>
+            </div>
+            <div class="col-sm-4">
+                <img src="/images/ZdrowieMamyi.jpg" class="img-responsive" style="width:100%" alt="Image"/>
+                <h4>Ciąża w pytaniach i odpowiedziach</h4>
+            </div>
+        </div>
+    </div>
+
 
         <footer class="row">
             <div class="col-md-12">
