--- a/przychodnia-activity/src/main/resources/templates/visit.html
+++ b/przychodnia-activity/src/main/resources/templates/visit.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
@@ -10,104 +10,105 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>                        
-        </button>
-        <a class="navbar-brand" href="/">Clinic Online</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Dla Pacjentów <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Pomoc w nagłych sytuacjach</a></li>
-              <li><a href="#">Jak korzystać z usług w szpitalu</a></li>
-              <li><a href="#">Telemedycyna</a></li>
-              <li><a href="#">Porady zdrowotne</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Placówki i Lekarze <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Placówki medyczne</a></li>
-              <li><a href="#">Nasi lekarze</a></li>
-              <li><a href="#">Salony optyczne</a></li>
-              <li><a href="#">Apteli</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">O nas <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Aktualności</a></li>
-              <li><a href="#">Zapisz się do newslettera</a></li>
-              <li><a href="#">Kariera</a></li>
-            </ul>
-          </li>
-
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/logout" ><span class="glyphicon glyphicon-log-out"></span> Sign Out</a></li>
-        </ul>
-      </div>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Clinic Online</a>
     </div>
-  </nav>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
 
-  <div class="container">
- 	<div class="alert alert-danger" th:if="${error != null}"
-			th:text="#{${error}}" />
-		<div class="alert alert-success" th:if="${success != null}"
-			th:text="#{${success}}" />
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Dla Pacjentów <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Pomoc w nagłych sytuacjach</a></li>
+            <li><a href="#">Jak korzystać z usług w szpitalu</a></li>
+            <li><a href="#">Telemedycyna</a></li>
+            <li><a href="#">Porady zdrowotne</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Placówki i Lekarze <span
+                  class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Placówki medyczne</a></li>
+            <li><a href="#">Nasi lekarze</a></li>
+            <li><a href="#">Salony optyczne</a></li>
+            <li><a href="#">Apteli</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">O nas <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Aktualności</a></li>
+            <li><a href="#">Zapisz się do newslettera</a></li>
+            <li><a href="#">Kariera</a></li>
+          </ul>
+        </li>
+
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Sign Out</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="alert alert-danger" th:if="${error != null}"
+       th:text="#{${error}}"/>
+  <div class="alert alert-success" th:if="${success != null}"
+       th:text="#{${success}}"/>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="row text-center">
-        <div class="card col-md-2 col-md-offset-2">
-          <img class="card-img-top img-fluid" src="images/internista.png" alt="Card image" style="width:100%"/>
-          <div class="card-img-overlay">
-            <br></br>
-            <h4 class="card-title">Internista</h4>
-            <a href="#" class="btn btn-primary">Zapisz się</a>
-          </div>
+      <div class="card col-md-2 col-md-offset-2">
+        <img class="card-img-top img-fluid" src="images/internista.png" alt="Card image" style="width:100%"/>
+        <div class="card-img-overlay">
+          <br/>
+          <h4 class="card-title">Internista</h4>
+          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</a>
         </div>
+      </div>
 
-      <div class="card col-md-2 col-md-offset-1" >
+      <div class="card col-md-2 col-md-offset-1">
         <img class="card-img-top img-fluid" src="images/profilaktyka.png" alt="Card image" style="width:100%"/>
         <div class="card-img-overlay">
           <h4 class="card-title">Profilaktyka i szczepienia</h4>
-          <a href="#" class="btn btn-primary">Zapisz się</a>
+          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</a>
         </div>
       </div>
 
       <div class="card col-md-2 col-md-offset-1">
         <img class="card-img-top img-fluid" src="images/dermatolog.png" alt="Card image" style="width:100%"/>
         <div class="card-img-overlay">
-          <br></br>
+          <br/>
           <h4 class="card-title">Dermatolog</h4>
-          <a href="#" class="btn btn-primary">Zapisz się</a>
+          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</a>
         </div>
       </div>
-    </div> 
+    </div>
 
     <div class="row text-center">
-        <div class="card col-md-2 col-md-offset-2">
-          <img class="card-img-top img-fluid" src="images/okulista.png" alt="Card image" style="width:100%"/>
-          <div class="card-img-overlay">
-            <br></br>
-            <h4 class="card-title">Okulista</h4>
-            <a href="#" class="btn btn-primary">Zapisz się</a>
-          </div>
+      <div class="card col-md-2 col-md-offset-2">
+        <img class="card-img-top img-fluid" src="images/okulista.png" alt="Card image" style="width:100%"/>
+        <div class="card-img-overlay">
+          <br/>
+          <h4 class="card-title">Okulista</h4>
+          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</a>
         </div>
+      </div>
 
-      <div class="card col-md-2 col-md-offset-1" >
+      <div class="card col-md-2 col-md-offset-1">
         <img class="card-img-top img-fluid" src="images/endokrynolog.png" alt="Card image" style="width:100%"/>
         <div class="card-img-overlay">
-          <br></br>
+          <br/>
           <h4 class="card-title">Endokrynolog</h4>
-          <a href="#" class="btn btn-primary">Zapisz się</a>
+          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</a>
         </div>
       </div>
 
@@ -115,26 +116,26 @@
         <img class="card-img-top img-fluid" src="images/pozostali.png" alt="Card image" style="width:100%"/>
         <div class="card-img-overlay">
           <h4 class="card-title">Pozostali specjaliści</h4>
-          <a href="#" class="btn btn-primary">Zapisz się</a>
+          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</a>
         </div>
       </div>
     </div>
 
     <div class="row text-center">
-        <div class="card col-md-2 col-md-offset-2">
-          <img class="card-img-top img-fluid" src="images/stomatolog.png" alt="Card image" style="width:100%"/>
-          <div class="card-img-overlay">
-            <br></br>
-            <h4 class="card-title">Stomatolog</h4>
-            <a href="#" class="btn btn-primary">Zapisz się</a>
-          </div>
+      <div class="card col-md-2 col-md-offset-2">
+        <img class="card-img-top img-fluid" src="images/stomatolog.png" alt="Card image" style="width:100%"/>
+        <div class="card-img-overlay">
+          <br/>
+          <h4 class="card-title">Stomatolog</h4>
+          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</a>
         </div>
+      </div>
 
-      <div class="card col-md-2 col-md-offset-1" >
+      <div class="card col-md-2 col-md-offset-1">
         <img class="card-img-top img-fluid" src="images/badania.png" alt="Card image" style="width:100%"/>
         <div class="card-img-overlay">
           <h4 class="card-title">Badania</h4>
-          <a href="#" class="btn btn-primary">Zapisz się</a>
+          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</a>
         </div>
       </div>
 
@@ -142,24 +143,75 @@
         <img class="card-img-top img-fluid" src="images/ortopeda.png" alt="Card image" style="width:100%"/>
         <div class="card-img-overlay">
           <h4 class="card-title">Ortopeda i fizjoterapeuta</h4>
-          <a href="#" class="btn btn-primary">Zapisz się</a>
+          <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Zapisz się</a>
         </div>
       </div>
     </div>
 
-    <hr></hr>
+    <hr/>
 
 
-        <footer class="row">
-            <div class="col-md-12">
-                <p>
-                    © 2018
-                </p>
+    <footer class="row">
+      <div class="col-md-12">
+        <p>
+          © 2018
+        </p>
+      </div>
+    </footer>
+
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Wybierz datę i godzinę wizyty</h4>
+        <div class="modal-body">
+          <div class="row">
+            <div class='col-sm-6'>
+              <input type="date" name="bday"/>
             </div>
-        </footer>
 
+            <div class='col-sm-6'>
+              <select name="Godzina">
+                <option value="8:00">8:00</option>
+                <option value="8:30">8:30</option>
+                <option value="9:00">9:00</option>
+                <option value="9:30">9:30</option>
+                <option value="10:00">10:00</option>
+                <option value="10:30">10:30</option>
+                <option value="11:00">11:00</option>
+                <option value="11:30">11:30</option>
+                <option value="12:00">12:00</option>
+                <option value="12:30">12:30</option>
+                <option value="13:00">13:00</option>
+                <option value="13:30">13:30</option>
+                <option value="14:00">14:00</option>
+                <option value="14:30">14:30</option>
+                <option value="15:00">15:00</option>
+                <option value="15:30">15:30</option>
+              </select>
+            </div>
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox"/> Skierowanie
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="text-right">
+          <button type="submit" class="btn btn-primary">Potwierdź</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
-  </body>
-  </html>
-
+  </div>
+</div>
+</body>
+</html>
