komunikacja z Activity, Start procesu

--- a/przychodnia-activity/src/main/resources/templates/index.html
+++ b/przychodnia-activity/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
         </li>
         
         <ul class="nav navbar-nav " sec:authorize="isAuthenticated()">
-        	<li><a href="/visit"> Zapisz się na wizyte</a></li>
+        	<li><a href="/visit/start/process"> Zapisz się na wizyte</a></li>
         	</ul>
         
       </ul>
