--- a/przychodnia-activity/src/main/resources/templates/index.html
+++ b/przychodnia-activity/src/main/resources/templates/index.html
@@ -74,9 +74,9 @@
   
 <div class="container">
   	<div class="alert alert-danger" th:if="${error != null}"
-			th:text="#{${error}}" />
+			th:text="${error}" />
 		<div class="alert alert-success" th:if="${success != null}"
-			th:text="#{${success}}" />
+			th:text="${success}" />
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -89,7 +89,7 @@
     <div class="carousel-inner">
 
       <div class="item active">
-        <img src="images/1.gif" alt="Los Angeles" style="width:100%;"/>
+        <img src="/images/1.jpg" alt="Los Angeles" style="width:100%;"/>
         <div class="carousel-caption">
           <h3>Najczęściej zadawane pytania - FAQ</h3>
           <p>Znajdziesz tu odpowiedzi na najczęściej zadawane pytania o usługi Medicover</p>
@@ -105,7 +105,7 @@
       </div>
     
       <div class="item">
-        <img src="images/3.gif" alt="New York" style="width:100%;"/>
+        <img src="/images/3.jpg" alt="New York" style="width:100%;"/>
         <div class="carousel-caption">
           <h3>Przewodnik Pacjenta</h3>
           <p>Instrukcje w jaki sposób możemy pomóc Ci w rozwiązaniu Twoich problemów zdrowotnych.</p>
