--- a/przychodnia-activity/src/main/resources/templates/visit.html
+++ b/przychodnia-activity/src/main/resources/templates/visit.html
@@ -174,13 +174,15 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Wybierz datę i godzinę wizyty</h4>
         <div class="modal-body">
+                <form class="form-horizontal" role="form" th:action="@{/visit/start/process}" th:object="${visit}" method="post">
+        
           <div class="row">
             <div class='col-sm-6'>
-              <input type="date" name="bday"/>
+              <input type="date" name="bday" id="visitData" th:field="*{date}"/>
             </div>
 
             <div class='col-sm-6'>
-              <select name="Godzina">
+              <select name="Godzina"  id="hour" th:field="*{hour}">
                 <option value="8:00">8:00</option>
                 <option value="8:30">8:30</option>
                 <option value="9:00">9:00</option>
@@ -202,16 +204,18 @@
           </div>
           <div class="checkbox">
             <label>
-              <input type="checkbox"/> Skierowanie
+              <input type="checkbox" th:field="*{referral}" id="referral"/> Skierowanie
             </label>
           </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <div class="text-right">
+             <div class="text-right">
           <button type="submit" class="btn btn-primary">Potwierdź</button>
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
+          </form>
+        </div>
+      </div>
+      <div class="modal-footer">
+     
       </div>
     </div>
   </div>
